# glTF

./: CMakeLists.txt  LICENSE.md  README.md
cmake/macros/: TargetOpenGL.cmake
src/common/: CMakeLists.txt  camera.hpp  common.hpp  storage.hpp
src/common/gltf/: forward.hpp  gltf.hpp
src/examples/: CMakeLists.txt
src/examples/basic/: simple.cpp
